<resources>
    <string name="app_name">The Hungry Bunch 2.0</string>
    <string name="room_number">Room Number</string>
    <string name="selected_meal">Selected Meal</string>
    <string name="total_amount">Total Amount</string>
    <string name="pay">Pay</string>
    <string name="made_payment">Made Payment</string>
    <string name="place_order">Place Order</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="room_number1">Room Number</string>
    <string name="textview">TextView</string>
    <string name="make_the_payment_to_the_following_number_076944804_then_hit_the_made_payment_button">Make the payment to the following number-076944804 then hit the made payment button</string>
    <string name="make_the_payment_to_8584450_buy_goods">Make the payment to 8584450 Buy Goods</string>
    <string name="select_building" />
    <string name="select_building_prompt" />
    <string name="selected_building">Selected Building:</string>
    <string name="room_number11">Room Number:</string>
    <string name="selected_meal1">Selected Meal:</string>
    <string name="total_amount1">Total Amount:</string>
    <string-array name="meals_array">
        <item>Chicken Choma With Curry Potato Wedges</item>
        <item>Coconut Bean Stew With Rice</item>
        <item>Lentil Curry(Ndegu) With Chapati</item>
        <item>Beef Pilau With Kachumbari</item>
        <item>Fried Mutton with Ugali and Greens</item>
        <item>Borewors</item>
        <item>Hamburger</item>
        <item>Beef Samosas</item>
        <item>Chicken Samosas</item>
        <item>Vegetable Spring Rolls</item>

    </string-array>
    <string-array name="building_options">
        <item>Qwetu Wilson</item>
        <item>Parallel four</item>
    </string-array>


</resources>